[tool.poetry]
name = "repl_python3_JeuDeDame"
version = "1.0"
description = ""
authors = ["Maxence, Aloys et Mattis <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
